remotescp read routine is bug fixed

--- a/asmitafileio/makefile.asmi
+++ b/asmitafileio/makefile.asmi
@@ -1,9 +1,5 @@
-BUILDHOST=`uname -n`
-all: asmitaapp bbfs asmfs asmitaremotetest remotescp
-	@echo "Build Host ----  $(BUILDHOST)"
-	@echo "Asmita app is built"
-    
-
+all: asmitaapp bbfs asmfs asmitaremotetest
+	echo "Asmita app is built"
 
 asmitaapp: asmitaapp.o 
 	gcc -o asmitaapp asmitaapp.o
@@ -21,7 +17,6 @@ clean:
 	rm -f bbfs
 	rm -f asmfs
 	rm -f asmitaremotetest
-	rm -f remotescp
 
 asmitafs: asmitaapp 
 	make mountasmitafs
@@ -45,28 +40,23 @@ unmountasmitafs:
 	fusermount -u /home/asmita/OSLab2/asmitafileio/mountdir
 
 bbfs: bbfs.o log.o
-	gcc -D_FILE_OFFSET_BITS=64 -I/usr/include/fuse -g -O2  -D$(BUILDHOST)  -o bbfs bbfs.o log.o -lfuse -pthread
+	gcc -D_FILE_OFFSET_BITS=64 -I/usr/include/fuse -g -O2   -o bbfs bbfs.o log.o -lfuse -pthread
 
 bbfs.o: bbfs.c
-	gcc -D_FILE_OFFSET_BITS=64 -I/usr/include/fuse -g -O2  -D$(BUILDHOST)  -c bbfs.c -pthread
+	gcc -D_FILE_OFFSET_BITS=64 -I/usr/include/fuse -g -O2   -c bbfs.c -pthread
 
 log.o: log.c
-	gcc -D_FILE_OFFSET_BITS=64 -I/usr/include/fuse -g -O2  -D$(BUILDHOST)  -c log.c -pthread
+	gcc -D_FILE_OFFSET_BITS=64 -I/usr/include/fuse -g -O2   -c log.c -pthread
 
 asmfs: asmfs.o log.o remotescp.o
 	gcc -D_FILE_OFFSET_BITS=64 -I/usr/include/fuse -g -O2   -o asmfs asmfs.o log.o remotescp.o -lfuse -lcurl -pthread 
 
 asmfs.o: asmfs.c
-	gcc -D_FILE_OFFSET_BITS=64 -I/usr/include/fuse -g -O2  -D$(BUILDHOST)  -c asmfs.c -pthread
+	gcc -D_FILE_OFFSET_BITS=64 -I/usr/include/fuse -g -O2   -c asmfs.c -pthread
 
 remotescp.o: remotescp.c
-	gcc -D_FILE_OFFSET_BITS=64 -D$(BUILDHOST)  -I/usr/include/fuse -g -O2   -c remotescp.c -pthread
+	gcc -D_FILE_OFFSET_BITS=64 -I/usr/include/fuse -g -O2   -c remotescp.c -pthread
 
-remotescp_debug.o: remotescp.c
-	gcc -D_FILE_OFFSET_BITS=64 -D$(BUILDHOST) -DREMOTESCPDEBUG -I/usr/include/fuse -g -O2 -o remotescp_debug.o  -c remotescp.c -pthread
-
-remotescp:  remotescp_debug.o
-	gcc  -D_FILE_OFFSET_BITS=64 -D$(BUILDHOST) -DREMOTESCPDEBUG -I/usr/include/fuse -g -O2 -o remotescp  remotescp_debug.o -pthread -lcurl
 
 
 
