coding style applied

--- a/asmitafileio/makefile
+++ b/asmitafileio/makefile
@@ -15,6 +15,12 @@ asmitaapp: asmitaapp.o
 	echo "asmitaapp"
 	gcc -o asmitaapp asmitaapp.o
 
+codingstandard: 
+	astyle --style=google ammifs.c
+	astyle --style=google log.c
+	astyle --style=google remotescp.c
+	astyle --style=google asmitaapp.c
+
 
 .c.o: 
 	gcc -c $<
