--- a/asmitafileio/makefile
+++ b/asmitafileio/makefile
@@ -66,11 +66,14 @@ mountasmfs:
 umountasmfs:
 	fusermount -u mountdir
 
-ammifs: ammifs.o log.o remotescp.o
-	gcc -D_FILE_OFFSET_BITS=64 -I/usr/include/fuse -g -O2  -D$(BUILDHOST)  -o ammifs ammifs.o log.o remotescp.o -lfuse -lcurl -pthread
+ammifs: ammifs.o log.o remotescp.o ammireserve.o
+	gcc -D_FILE_OFFSET_BITS=64 -I/usr/include/fuse -g -O2  -D$(BUILDHOST)  -o ammifs ammifs.o log.o ammireserve.o remotescp.o -lfuse -lcurl 
 
 ammifs.o: ammifs.c
-	gcc -D_FILE_OFFSET_BITS=64 -I/usr/include/fuse -g -O2  -D$(BUILDHOST)  -c ammifs.c -pthread
+	gcc -D_FILE_OFFSET_BITS=64 -I/usr/include/fuse -g -O2  -D$(BUILDHOST)  -c ammifs.c 
+
+ammireserve.o:	ammireserve.o
+	gcc -D_FILE_OFFSET_BITS=64 -I/usr/include/fuse -g -O2  -D$(BUILDHOST)  -c ammireserve.c 
 
 log.o: log.c
 	gcc -D_FILE_OFFSET_BITS=64 -I/usr/include/fuse -g -O2  -D$(BUILDHOST)  -c log.c -pthread
